Fix of multiple bugs and protocol issues